# neco_ping

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml  release.yml
src/neco_ping/: __init__.py
