[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neco_ping"  
version = "0.0.2"
authors = [
  { name="Alien Catboy", email="neco_arc@burunyuu.com" },
]
description = "Minimalistic silent Telegram notifier for ML pipelines"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests"
]

[project.urls]
"Homepage" = "https://github.com/StrangePineAplle/neco_ping" 

[tool.setuptools.packages.find]
where = ["src"]
